apps/cli/crates/onequery-cli/src/commands/auth/snapshots/onequery__commands__auth__tests__import_dry_run_output_snapshot_uses_email_when_display_name_is_missing.snap
---
source: crates/onequery-cli/src/commands/auth/tests.rs
expression: "output.lines.join(\"\\n\")"
---
Auth import dry run succeeded for alice@example.com <alice@example.com>
Planned effect: persist local auth session
