apps/cli/crates/onequery-cli/src/commands/auth/snapshots/onequery__commands__auth__tests__login_output_snapshot_with_bootstrapped_org.snap
---
source: crates/onequery-cli/src/commands/auth/tests.rs
expression: "output.lines.join(\"\\n\")"
---
Logged in as Alice <alice@example.com>
Credentials: stored
Active org initialized to acme
