apps/cli/crates/onequery-cli/src/commands/auth/snapshots/onequery__commands__auth__tests__logout_dry_run_output_snapshot_reports_local_state.snap
---
source: crates/onequery-cli/src/commands/auth/tests.rs
expression: "output.lines.join(\"\\n\")"
---
Auth logout dry run succeeded.
Would remove persisted credentials: yes
Would clear active org: yes
