apps/cli/crates/onequery-cli/src/commands/auth/snapshots/onequery__commands__auth__tests__whoami_output_snapshot_projects_selected_fields.snap
---
source: crates/onequery-cli/src/commands/auth/tests.rs
expression: "output.lines.join(\"\\n\")"
---
{
  "effectiveOrg": "acme",
  "user": {
    "email": "alice@example.com"
  }
}
