apps/cli/crates/onequery-cli/src/commands/auth/snapshots/onequery__commands__auth__tests__whoami_output_snapshot_uses_server_org_when_context_is_unresolved.snap
---
source: crates/onequery-cli/src/commands/auth/tests.rs
expression: "output.lines.join(\"\\n\")"
---
User: Alice
Email: alice@example.com
Authenticated: yes
User ID: user-1
Effective Org: acme
Effective Org Source: server
